<resources>
    <string name="app_name">DroidCafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="droid_desserts_title">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy</string>
    <string name="ice_description">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo_description">Froyo is premium self serve frozen yogurt</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label">Name</string>
    <string name="enter_name_hint">Enter with your name</string>
    <string name="address">Address</string>
    <string name="phone_hint">Enter with your phone here</string>
    <string name="phone">Phone</string>
    <string name="note_label">Note</string>
    <string name="note_hint">Enter note here</string>
    <string name="delivery_label">Choose a delivery method</string>
    <string name="same_day_radio">Same day messenger service</string>
    <string name="next_day_radio">Next day ground delivery</string>
    <string name="pick_up_radio">Pick up</string>
    <string name="action_order">Order</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_contact">Contact</string>
    <string name="alert_button">Alert</string>
    <string name="date_button">Date</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>