<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.droidcafe.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="2"
        android:title="@string/action_order"
        android:icon="@drawable/ic_shopping_cart_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="4"
        android:title="@string/action_contact"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="always" />
</menu>